--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,42 @@
+body{
+    background-color: blanchedalmond;
+    font-family: Helvetica, sans-serif;
+}
 
+#content{
+    width: 600px;
+    margin: 0 auto;
+    
+}
+
+p{
+    line-height: 1.5em;
+}
+
+img{
+    float: left;
+    width: 200px;
+    margin-right: 1em;
+}
+
+#pic2{
+    float:right;
+}
+
+a:link{
+    color: lightslategray;
+    text-decoration: none;
+}
+
+a:visited{
+    color:purple;
+}
+
+a:hover{
+    color:crimson;
+    text-decoration: underline;
+}
+
+a:active{
+    color:blue;
+}
